--- a/src/pages/Services.astro
+++ b/src/pages/Services.astro
@@ -128,9 +128,9 @@ import Layout from '../layouts/Layout.astro';
     <!-- Call to Action -->
     <section class="text-center bg-blue-100 text-[#111] p-8 rounded-lg">
       <h2 class="text-3xl font-bold mb-4">Ready to Get Started?</h2>
-      <p class="text-lg mb-6">Contact us for a free property assessment and personalized quote.</p>
+      <p class="text-lg mb-6">Sign up now and begin your journey with us with more peace of mind.</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYFVcX1c0UyzgJb0spkKjmGYy-z6fDWujYkBABZXxjADNC1g/viewform?usp=header" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">
-        Enquire Now
+        Sign Up Now
       </a>
     </section>
   </main>
